--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="./js/main.js" defer></script>
         <title>js-biglietto-treno</title>
+        <style>
+            *,
+            *::before,
+            *::after {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            html,
+            body {
+                width: 100%;
+                height: 100%;
+            }
+
+            body {
+                display: flex;
+                align-items: center;
+                font-family: sans-serif;
+                justify-content: center;
+            }
+
+            .info {
+                font-size: 1rem;
+                color: #323232;
+                line-height: 1.5rem;
+            }
+        </style>
     </head>
-    <body></body>
+    <body>
+        <div class="info">Simple info!</div>
+    </body>
 </html>
